@@ -92,6 +92,8 @@ if (project.ext.forceBootifulArtifact || (!rootProject.publishFlag && !rootProje
         list.add("--add-opens")
         list.add("java.base/java.lang=ALL-UNNAMED")
         list.add("--add-opens")
+        list.add("java.base/sun.security.action=jdk.crypto.ec")
+        list.add("--add-opens")
         list.add("java.base/java.nio=ALL-UNNAMED")
         list.add("--add-opens")
         list.add("java.base/sun.nio.ch=ALL-UNNAMED")
